Fix Top Nav Layout Issue

--- a/src/Citizen-App/Citizen-App-Components/wwwroot/site.css
+++ b/src/Citizen-App/Citizen-App-Components/wwwroot/site.css
@@ -1,41 +1,56 @@
 ﻿/*Header*/
 .top-nav--donkerblauw .nav__link, .top-nav--donkerblauw .nav__link:visited, .top-nav--donkerblauw .top-nav__block-item, .top-nav--donkerblauw .top-nav__block a {
+    text-align:center;
     color: #b4b4b4 !important;
     background-color: transparent !important;
+    margin-left:auto;
+    margin-right:auto;
 }
 
-    .top-nav--donkerblauw .nav__link.nav__link--active {
-        color: #005ea5 !important;
-        border-color: transparent !important;
-        border-bottom-color: #005ea5 !important;
+.top-nav .container > div {
+        width:100%;
+        margin-left: auto;
+        margin-right: auto;
     }
+
+.nav .div .div {
+    background-color:black;
+}
 
 .top-nav--donkerblauw {
     background-color: #fff !important;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .top-nav-autoresize .nav__link {
     font-size: 0.8em !important;
     font-weight: 400;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 nav.top-nav .nav__item {
-    width: 25%;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-    nav.top-nav .nav__item a {
-        white-space: nowrap;
-        padding-left: 0px;
-        padding-right: 0px;
-    }
+nav.top-nav .nav__item a {
+    white-space: nowrap;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 100px;
+}
 
     nav.top-nav .nav__item i.icon {
         font-size: 2em;
         display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
 /*Content*/
 .content {
-    min-height: 400px;
+    min-width: 400px;
 }
